# PokerWiz

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.node.json
desktop-shell/: main.ts  preload.ts
desktop-ui/: index.html  package-lock.json  package.json
docs/: architecture.md  coverage-policy.md  full-game-architecture.md  pack-workflow.md  phase2-plan.md  phase3-coverage-wave-1.md  phase3-coverage-wave-2.md  phase3-coverage-wave-3.md  phase3-coverage-wave-4.md  phase3-coverage-wave-5.md  phase3-coverage-wave-6.md  phase3-coverage-wave-7.md  phase3-entry-checklist.md  plan.md  preflop-priority-coverage.md  progress.md  solver-import-contract.md
engine/: Cargo.toml
engine/benches/: preflop_bench.rs
engine/src/: lib.rs
engine/src/api/: mod.rs
engine/src/decision/: mod.rs
engine/src/domain/: mod.rs
engine/src/explanation/: mod.rs
engine/src/normalization/: mod.rs
engine/src/repository/: mod.rs
engine/src/scenario/: mod.rs
engine/tests/: preflop_engine.rs
preflop-engine/: decision-service.ts  domain.ts  explanation-service.ts  normalization.ts  preflop-engine.ts  scenario-mapper.ts  strategy-repository.ts
shared/: contracts.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tests/: phase1-status.test.ts  phase2-status.test.ts  preflop-engine.test.ts  preflop-flat-export-normalizer.test.ts  preflop-pack-manifest.test.ts  preflop-pack-validator.test.ts  preflop-simple-csv-profile-normalizer.test.ts  preflop-solver-import.test.ts  preflop-tabular-export-normalizer.test.ts  (+1 more)
(+32 files in other folders)
