[package]
name = "pokerwiz-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "pokerwiz_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.0.0", features = [] }
pokerwiz-engine = { path = "../engine" }
